--- a/server/server/package.json
+++ b/server/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "aws-sdk": "^2.968.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.6",
     "moment-timezone": "^0.5.33",
